start to structure whole chapter around barriers

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -732,6 +732,11 @@ There were some issues of access for some participants who did not remember or r
 
 <!-- NOTE - LINK TO OTHER KINDS OF ERRORS - NEXT CHAPTER -->
 
+
+
+
+
+
 ### Impact of the half-baked game template
 
 <!-- NOTE SOME OF THIS CAN  -->
@@ -826,19 +831,38 @@ DEVELOP THIS SECTION -->
 - This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
 
 
+### Discussion on Authenticity of Tools
 
+NOTE - Section moved from conclusion.
 
+An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
+
+The design of the starting template shields learners from much of the complexity of the underlying web-technology and provided potential affordances via embodied elements that facilitated learner agency via expression of home interests, play with dynamics and game layout.
+
+The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
+
+These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
+
+While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
 
 ## Participant conflicts / contractions
 
-Beyond the design tensions above that were smaller in scope and addressed relatively quickly, this section examines more extensive contradictions between system elements which developed into conflicts which significant in stopping participant progress. The first involves clashes of identity and ambition and the second frustrations due to technical processes.
+Beyond the design tensions above that were smaller in scope and addressed relatively quickly, this section examines more extensive contradictions between system elements which developed into conflicts which significant in stopping participant progress.
 
- 1. Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),
+The first which involves clashes of identity and ambition is outlined briefly and explored in more depth in a later chapter.
 
- 2. Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing
+The second frustrations due to technical processes.
+
+
+
+
+
 
 
 ### 1. Identity hardcore coding & disfunctional group work - P1
+
+**1. Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
+
 
 For some families and individual participants there were conflicts to do with a sense of anxiety and alienation from the group coding environment and associated peer working dynamics.
 
@@ -930,6 +954,8 @@ INSERT SOME ANALYSIS HERE BASED ON AGENCY AND AFFORDENCES OFFERED
 The next chapter explores responses to the aspect of identity in more detail.
 
 ### 2. Participant conflict due to lack of relevant technical support
+
+**2. Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing**
 
 The nature of this conflict stemmed from tensions surrounding  and knowledge of coding and lack of access to relevant technical support.
 
@@ -1088,6 +1114,8 @@ An additional rationale for this process was to help reduce potential internal b
 
 ### 3. Facilitator conflict addressing the Play Paradox
 
+NOTE - MOVE THIS TO TWO? OR TO ONE? SO END WITH TWO WHICH CREATES A TRANSITION TO THE NEXT CHAPTER EFFECTIVELY.
+
 This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents.
 CHECK IS THIS PREVIOUSLY EXPLORED?
 
@@ -1112,20 +1140,19 @@ _Missions as Islands_
 
 REPLACE WITH 360 OF MAPS
 
+<!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
+
+**Lack of reflection and moments to reinforce what is being learnt.** To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey.
+
+**Learners take on features which are too advanced or complex for their current coding level.** The use of a physical map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions and present patterns to encourage learners to start with ones that involve simple code changes but return a large change in terms of gameplay experience.
+
+
+
 I have de-prioritised Maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods)
 
 MOVE LATER? FINAL CHAPTER?
 It is of value to out like key tensions in the design that maps have the potential to address in more formal teaching environments. I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
 
-<!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
-
-**Lack of reflection and moments to reinforce what is being learnt**
-
-To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey.
-
-**Learners take on features which are too advanced or complex for their current coding level**
-
-The use of a physical map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions and present patterns to encourage learners to start with ones that involve simple code changes but return a large change in terms of gameplay experience.
 
 
 
@@ -1204,6 +1231,17 @@ Extra missions which highlight game challenge and user experience may help learn
 
 
 
+### Limits to the learning dimensions map in an informal setting
+
+This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
+
+The process of developing the learning dimensions map was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned
+
+While I attempted to resolve this by adopting Bevan and al's observational approach, the process of making this more relevant and recognisable for UK teachers arguably drew me off course. This theme is explored in detail in the next two chapters.
+
+
+
+
 
 <!-- NOTE EXPAND IF USEFUL -->
 
@@ -1229,24 +1267,6 @@ NOTE - THIS IS NEEDED FOR LATER CHAPTERS
 
 
 
-
-### Discussion on Authenticity of Tools
-
-An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
-
-While the last chapter addressed authenticity of tools and processes in general terms this chapter has explored the impact on learners. For example, the design of the starting template shielded learners from much of the complexity of the underlying web-technology and provided affordances via embodied elements that facilitated learner agency via expression of home interests, play with dynamics and game layout. The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
-
-These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
-
-While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, the following section explores the potential for drama processes to address learner anxiety in this domain.
-
-### Limits to the learning dimensions map in an informal setting
-
-This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
-
-The process of developing the learning dimensions map was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned
-
-While I attempted to resolve this by adopting Bevan and al's observational approach, the process of making this more relevant and recognisable for UK teachers arguably drew me off course. This theme is explored in detail in the next two chapters.
 
 ### Starting discussion on the mutual nature of the design process.
 
