--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -107,8 +107,8 @@ This chapter
 - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review)
 - gives an overview of the evolution of the key pedagogical features of the learning design used in the research process
 - draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
-- explores 2 key conflicts using the terminology of Saninno
-- Presents a synthesis to barriers (and) tactics to overcome them
+- explores 2 key conflicts using the terminology of Saninno in TADS
+- Presents a synthesis to initial barriers (and) tactics to overcome them
 
 Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
 
@@ -138,6 +138,7 @@ Saskia Leggett is a researcher who was active in the in Creative Family Learning
 **Summary of themes emerging**
 
 In my analysis, I have proritised data which in forms the first research question and specifically addressing barriers and tensions for both practitioners and participants which exist in this domain of activity.
+NOTE - REVIEW THIS BASED ON THEORETICAL LANGUAGE - PERHAPS OBSTACLES, CONTRADICTIONS, TENSIONS AND INTERVENTIONS.
 
 _Table of initial data_
 
@@ -575,19 +576,27 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 As explored in the theoretical framework in activity theory tensions and contradictions are a vital source of change and evolution of new and ongoing activity systems.   
 
-On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities. Combinations of tensions can compound to create longer lasting and more serious conflicts if not resolved [Engestrom early].
+To avoid the dangers of the vague use of the terms tensions and contractions [@karanasios_exploring_2017], this chapter will aim to be more descriptive.  
 
-It also useful to recap here the interpretations of agency explored in the theoretical framework. Instrumental agency is relevant here to help examine and the work of learning designers to remove  barriers, Transformational and authorial agency serves to explore the potential for learners to address and overcome tensions and conflicts in their own way. In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
+
+NOTE - there is also the concept of congruencies - or strengths within activity systems. Where appropriate these systems strengths and positive alignments are helpful to note [@kamanga_contradictions_2021].
+
+
+On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities. Combinations of tensions can compound to create longer lasting and more serious conflicts if not resolved [Engestrom early]. The concept of levels of contradictions are helpful [@sannino_cultural-historical_2018] the forth being a conflict.
+
+In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
+
+It also useful to recap here the interpretations of agency explored in the theoretical framework. (NOTE IS IT OR SHOULD I JUST PICK TADS AND USE THAT LANGUAGE?) Instrumental agency is relevant here to help examine and the work of learning designers to remove  barriers, Transformational and authorial agency serves to explore the potential for learners to address and overcome tensions and conflicts in their own way.
 
 <!-- (Relational agency?) -->
 
 In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
 
-In the following sections of this chapter I focus on such which relate directly to the research questions and which help inform the findings of later chapters. In particular I draw out more visible conflicts which threaten more serious distruption of activities.
+In the following sections of this chapter I focus on such which relate directly to the research questions and which help inform the findings of later chapters. In particular I draw out more visible conflicts which threaten more serious disruption of activities.
 
 ### Design tensions experienced as a researcher / designer
 
-This section is writen from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants. I  focus on tensions involving authenticity as a precursor to exploring their relationshiop with participation experience of agency.
+This section is written from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants. I  focus on tensions involving authenticity as a precursor to exploring their relationship with participation experience of agency.
 
 Rainer, Bolton and other practitioner-researchers agree on the potential and value of exploring other subject matter - e.g.  literacy, maths, science and history -  and undertaking authentic project work within a drama frame [-@rainer_drama_2012].
 
@@ -613,80 +622,20 @@ Javascript is an authentic language, core to modern web pages and applications. 
 Phaser is a javascript framework embedded in html page. Unlike many game making tools this tools set can be extended to other kinds of projects and is a professional and foundational toolset used to build the majority of websites and many phone applications.
 
 
-
 <!-- - audience
 - tools
 - processes (professional and peers ?)
 - shared concepts - link to GDPs as a big one -->
-
   <!-- An unusual approach so why?
-
   - involvement with mozilla / teach the web
   - authenticity - link between developer community and education, global in scope
   - can use a cut and paste, remix, irreverant approach - link to media activist / hacktivist pirate cultures.
   other unexpected Benefits
-
   - could bring in other web creation resource, piskel, -->
-  -
-#### Tensions associated with authenticity of audience
-
-
-**Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience**.
-
-Making for peers has value but can be amplified and scoped using a fictional or controlled external audience often via scenarios.
-
-<!--
-MOVE To LATER DISCUSSION ON AUTHENTICITY IN LATER CHAPTERS?
-
-In line existing PBL research [LIT NEEDED]  with previous iterations of this learning design the process of creating a game for a real audience of university students was motivating [DATA NEEDED].
-
-While the use of a fictional audience in the drama is clearly inauthentic, authenticity is "on a scale" [find support].
-
-In relation to existing literature this is well explored but the use of drama processes to add to this experience is potentially very fruitful to:  increase learner motivation; seed community practice; and  ADDITIONAL (something about learner identities)
--->
-
-Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
-
-The process of starting with a broken but playable template game allowed learners to be able to share their game with others from the start of the coding process.
-
-As a designer I identified this tactic as a way to address learner disengagement if game coding is taught from scratch via a step by step instructions from first principles, especially in younger ages.
-
-Similarly, in my journal notes, I reflect on the difficulty of interrupting the flow of making activities once they are underway. I thus began avoiding stopping making to share points to the whole class and avoid demonstrating key concepts on the screen.
-
-**Restricted vs extended community - e.g. why not scratch with online community?**
-
-Beyond technical considerations regarding scratch and use of physics etc,
-Learning technology in community settings can engender feelings of agency and motivation from part of wide network and the  diverse pathways. [@blunden_interdisciplinary_2009].
-
-Time consideration of the process of being involved in an online community may remove time spent doing real life playtesting.
-
-Also - the diversity of creations available on a online commmunity  could remove the more communal experience of the designed limitations.
-
-
-
-
-<!-- There are examples of the authenticity of the audience being used by participants
-- Suzanna uses the imagined audience to norm behaviour.
-- Olivia (Th) imagines the impact of her game on real students as a motivational factor and one which drives design decisions. -->
-
-
-<!-- TENSION OF TIME ALLOCATION OF DRAMA PROCESS.
-The tensions associated with the use of time and efforts spent by participants engaging with the drama processes.
-The process of bringing people into the culture merit allocating time to address inequalities.
-
-Here, in response to potential alienation from the culture of coding, I have prioritised the introduction of tools and processes which participants can draw on to build agency.  -->
-
-<!-- NOTE - BRING THE DISCUSSION BACK TO THE RQS - -->
-<!--
-Exploring classroom culture, Engeström [-@engestrom1998reorganizing] notes the challenges of nurturing the motivation of students and tensions which surround the objectives of children of "schoolgoing". (complete this) -->
-
-<!-- NOTE - Find complexity here?  -->
-
 
 Research on project based learning using technology supports the motivational and inspirational factors of authentic tools in the fields of STEM computing [@garneli_computing_2015-1; @humble_use_nodate], media making and STEM in general. [IF SO FIND THIS ]
 
 <!-- The inspirational factor of _lifting the lid_ was reflected in a conversation among participants communicating a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game. -->
-
 
 In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed.
 
@@ -695,8 +644,6 @@ However, in terms of complexity of tools use, careful shepherding is involved to
 The use of code playgrounds mirrors that of professionals. The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
 
 While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
-
-
 
 
 ## The impact of the core tools of code playgrounds and templated game
