on design evolution

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1223,6 +1223,12 @@ NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY.
 
 As explored in x, the process of this chapter is in line with perspectives approaching research with an open remit to see what tensions come into focus in a particular setting. This allows a subsequent  refocusing of research to explore these emerging issues in more depth.
 
+The particular nature of the setting is significant.
+It holds promise to generate resources more generally.
+Something explored in conclusion.  
+
+
+
 <!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
 After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
 
