--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -116,6 +116,10 @@ Due to the novel nature of the learning design the detailed outline of the speci
 
 The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice. One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
 
+As explored in other chapters X, there is a gulf between instruction based tutorials and more open create your own game challenges in project work.
+
+This chapter charts this tension and the evolutions of resources which ended up trying to occupy this middle ground between instruction and (overwhelmingly) free choice. 
+
 <!-- **Methodology for exposing tensions**
 
 Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
@@ -1101,8 +1105,6 @@ MOVE LATER? FINAL CHAPTER?
 It is of value to out like key tensions in the design that maps have the potential to address in more formal teaching environments. I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
 
 
-
-
 #### Learning Dimensions Map
 
 In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity.
@@ -1187,9 +1189,6 @@ The process of developing the learning dimensions map was helpful for me as a re
 While I attempted to resolve this by adopting Bevan and al's observational approach, the process of making this more relevant and recognisable for UK teachers arguably drew me off course. This theme is explored in detail in the next two chapters.
 
 
-
-
-
 <!-- NOTE EXPAND IF USEFUL -->
 
 <!-- While the use of these skills is not unique to game making and common to pick up on many making situations, the use of external image and sound asset creation tools which then creates production pipeline process does engender key navigation and importing and exporting skills which are very valuable in online environments. -->
@@ -1215,18 +1214,24 @@ NOTE - THIS IS NEEDED FOR LATER CHAPTERS
 
 
 
-### Starting discussion on the mutual nature of the design process.
+### Discussion on the emergent (and mutual) nature of the design (and reseach?) process.
+
+As explored in chapter x , the process of this chapter is in line with (participantory design and DBR) perspectives approaching research with an open remit to see what tensions come into focus in a particular setting.
+
+This allows a subsequent  refocusing of research to explore these emerging issues in more depth.
+
+The most significant manifestation of this process is in the evolved of the learning design and resources.
+
+Resources had with concrete additions from parents, PGCE students, Edlab students, University colleagues and with more indirect ongoing feedback from young people and their parents.
 
 With guidance, PGCE students created printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect. This approach was more prescriptive than I would have adopted, however it worked well. I then made a connection to UMC literature.
 
 NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY.
 
-As explored in x, the process of this chapter is in line with perspectives approaching research with an open remit to see what tensions come into focus in a particular setting. This allows a subsequent  refocusing of research to explore these emerging issues in more depth.
 
 The particular nature of the setting is significant.
 It holds promise to generate resources more generally.
 Something explored in conclusion.  
-
 
 
 <!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
@@ -1238,6 +1243,13 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 ### Link to next chapter
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions.
+
+A key focus of this chapter has been relatively micro - barriers to computer coding and use of particular software - drawing on and aligning with the HCI literature and existing work which exploses problems of learning programming syntax.
+
+However, while essential to the progress of the participants, this is not the main focus of the study.
+
+NOTE - Change the following to link / signpost to other chapter x 2 .
+And suggestion is to sway 5 and 6 - so putting game design patterns first.
 
 As explored in literature review the possibility to change and to play with identity is important in the work of Gee and ITO, who explore the role of the design of games and the surrounding communities that build up around games to support an nurture the development of player identities. The process is shown to have beneficial effects in supporting the creative process. In a similar vein, drama processes like the mantle of the expert are designed and enacted by facilitators in ways which allow participants to draw on their existing knowledge and encourages them to put this into practice in fictional scenarios.
 
