--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -112,13 +112,15 @@ This chapter
 
 Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
 
-**Key questions / motivations in creating a new learning community - MOVE?**
+**Key questions / motivations in creating a new learning community**
 
-The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice. One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
+The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice.
+
+One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that. 
 
 As explored in other chapters X, there is a gulf between instruction based tutorials and more open create your own game challenges in project work.
 
-This chapter charts this tension and the evolutions of resources which ended up trying to occupy this middle ground between instruction and (overwhelmingly) free choice. 
+This chapter charts this tension and the evolutions of resources which ended up trying to occupy this middle ground between instruction and (overwhelmingly) free choice.
 
 <!-- **Methodology for exposing tensions**
 
