--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -86,8 +86,7 @@ To help the reader understand the data in this chapter the following notes on in
 
 
 <!-- - A quick summary of how parts of the design address three planes [is here](https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/edit?usp=sharing) -->
-## Chapter introduction
-
+## Chapter introduction and place in the thesis
 
 <!-- The working title of this chapter is Missions which aligns with a strand of the 3M game making pedagogical model developed in the course of this study. -->
 
@@ -97,25 +96,6 @@ The purpose of this chapter is to explore how the data gathered informs thinking
 - How can learners build agency in an evolving community of game makers?
 
 In the last chapter we explored inclusive pedagogical methods that helped participants become part of an emerging community of game makers. This chapter analyses a sub-activity system to the creation of the whole game, namely the implementation of individual game design patterns (GDPs).
-
-### On GDP as unit of analyis
-
-NOTE  - WHERE TO PUT THIS?
-
-The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
-
-- There is a practicality in terms of defining possible boundaries of what to analyse in depth.
-- There is a more frequent iteration present - usually a period of playtesting after each new pattern added.
-- This research with a practitioner focus, looks to identify emerging barriers to comprehension, communication and practical barriers to implementing code structures. Thus a smaller unit that allows a large amount of granularity is useful. (compared to broader observations)
-- Each GDP can be seen as a project given an interpretation of project as the concrete implementation of a goal
-- That concreteness / implementation is particularly valid given the regular play-testing of creations often after each GDP is added in a peer environment.
-
-This sentiment is echoed by something I found in the video data. As one parent expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really"
-
-
-Analysing the implementation of GDPs as a unit of activity allows the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design. In this section I briefly explore the utility of the concepts of activity, actions and operations when applied to implementing GDPs [@kuutti_activity_1995].
-
-  "...actions consist of chains of operations, which are well-defined habitual routines used as answers to conditions faced during the performing of the action. Initially each operation is a conscious action, consisting of both the orientation and execution phases, but when the corresponding model is good enough and the action has been practiced long enough, the orientation phase will fade and the action will be collapsed into an operation, which is much more fluent." [@kuutti_activity_1995]
 
 
 
@@ -144,6 +124,28 @@ https://docs.google.com/document/d/1RZnznbR4HKrgL8VFfIqoCrCAJM0mf_sM8iEN4KCGeZ4/
 
 And the coding structure here   
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
+
+
+### On GDP as unit of analyis
+
+NOTE  - WHERE TO PUT THIS?
+
+The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
+
+- There is a practicality in terms of defining possible boundaries of what to analyse in depth.
+- There is a more frequent iteration present - usually a period of playtesting after each new pattern added.
+- This research with a practitioner focus, looks to identify emerging barriers to comprehension, communication and practical barriers to implementing code structures. Thus a smaller unit that allows a large amount of granularity is useful. (compared to broader observations)
+- Each GDP can be seen as a project given an interpretation of project as the concrete implementation of a goal
+- That concreteness / implementation is particularly valid given the regular play-testing of creations often after each GDP is added in a peer environment.
+
+This sentiment is echoed by something I found in the video data. As one parent expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really"
+
+
+Analysing the implementation of GDPs as a unit of activity allows the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design. In this section I briefly explore the utility of the concepts of activity, actions and operations when applied to implementing GDPs [@kuutti_activity_1995].
+
+  "...actions consist of chains of operations, which are well-defined habitual routines used as answers to conditions faced during the performing of the action. Initially each operation is a conscious action, consisting of both the orientation and execution phases, but when the corresponding model is good enough and the action has been practiced long enough, the orientation phase will fade and the action will be collapsed into an operation, which is much more fluent." [@kuutti_activity_1995]
+
+
 
 
 ## Study of Vignette A
