final comments for link to next chapter

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -116,7 +116,7 @@ Due to the novel nature of the learning design the detailed outline of the speci
 
 The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice.
 
-One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that. 
+One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that.
 
 As explored in other chapters X, there is a gulf between instruction based tutorials and more open create your own game challenges in project work.
 
@@ -1230,7 +1230,6 @@ With guidance, PGCE students created printable resources that highlighted partic
 
 NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY.
 
-
 The particular nature of the setting is significant.
 It holds promise to generate resources more generally.
 Something explored in conclusion.  
@@ -1244,23 +1243,24 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 
 ### Link to next chapter
 
-This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions.
+This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been relatively micro - barriers to computer coding and use of particular software - drawing on and aligning with the HCI literature and existing work which exposes problems of learning programming syntax.
 
-A key focus of this chapter has been relatively micro - barriers to computer coding and use of particular software - drawing on and aligning with the HCI literature and existing work which exploses problems of learning programming syntax.
+Pivot to next chapter,
 
-However, while essential to the progress of the participants, this is not the main focus of the study.
+  - This chapter is limited in the video data and close exploration of the
+  - In analysis of data from video other more social factors were given priority - based on the key interests of this study
+  - Returning to Rogoff's 2 lenses, while this as focused on a personal, the next is social and the one after is more cultural in nature.
 
-NOTE - Change the following to link / signpost to other chapter x 2 .
-And suggestion is to sway 5 and 6 - so putting game design patterns first.
+<!--
+NOTE - In the following chapters, social and cultural lenses are used to analyse video data. -->
+
+Chapter six explores the delivery and start to explore the impact of the process drama used and emerging community processes.
 
 As explored in literature review the possibility to change and to play with identity is important in the work of Gee and ITO, who explore the role of the design of games and the surrounding communities that build up around games to support an nurture the development of player identities. The process is shown to have beneficial effects in supporting the creative process. In a similar vein, drama processes like the mantle of the expert are designed and enacted by facilitators in ways which allow participants to draw on their existing knowledge and encourages them to put this into practice in fictional scenarios.
-
-The next chapter  focus on the learner response to challenges of game making in the recorded sessions. It explores the delivery and start to explore the impact of the process drama used and the use of authentic tools and emerging community processes.
 
 
 <!-- NOT SURE WHAT TO DO WITH THIS IN THIS CHAPTER
  **Facilitators may have a more linear and limited view of ‘progress’ than learners:**
-
  Side missions which explore and celebrate different ‘maker types’ (informed by Bartle’s player types) can provide the opportunity to discuss characteristics of different making/design approaches.   -->
 
 <!-- #### Tensions related to choice of pathways -->
