link to existing work on tensions

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1209,12 +1209,14 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 ### Summary of barriers exposed in this study
 
-A summary (table or text) of the barriers exposed in interviews and in journal observations and in feedback from participants. Perhaps linking to appendix.
+A summary (table or text) of the barriers and tensions exposed in interviews and in journal observations and in feedback from participants. Perhaps linking to appendix.
+
+Return to this table
+https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
+or this one
+https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
 
 NOTE - THIS IS NEEDED FOR LATER CHAPTERS
-
-
-
 
 ### Discussion on the emergent (and mutual) nature of the design (and reseach?) process.
 
